# Molecular_dinamics

./: README.md
Molecular_dinamics_with_openGL_and_CUDA/: CMakeLists.txt  RUN  main.cpp  solver_file.cu
Molecular_dinamics_with_openGL_and_CUDA/experiment/: X.eps  X2.eps  X3.eps
Molecular_dinamics_with_openGL_and_CUDA/include/: add_functions.h  include_files.h  parameters.h  solver_file.h  source_funct.cuh  vars.h
